--- a/src/main/resources/application.conf.template
+++ b/src/main/resources/application.conf.template
@@ -1,19 +1,31 @@
 
-version = "V5.1"
-#origin of the files
-origin = "/Users/dpiscia/RD-repositories/GenPipe/data/NA12878/"
+version = "1.0.2"
+#origin of the files, where the orginal VCF are
+origin = "/Users/dpiscia/RD-repositories/vcfLoader/data/"
+#where the umd annotated files are placed
+originUMD ="/Users/dpiscia/RD-repositories//GenPipe/out/V5.1/umd/"
+#leave blank
+umdAnnotated=""
+originLoaded ="/Users/dpiscia/RD-repositories/vcfLoader/out/1.0.2/loaded"
+newLoaded="/user/dpiscia/V6.0.2/loaded/"
+#folder destination
+destination = "/Users/dpiscia/RD-repositories/vcfLoader/out/"
 
-destination = s"/Users/dpiscia/RD-repositories/GenPipe/out/"
+#genome size partition
+sizePartition = 90000000//20000000
+#file repartions
+repartitions = 4//240
+sampleFile = "/Users/dpiscia/RD-repositories/vcfLoader/illumina.txt"
+preFix = ""
+files = ["NA12892", "NA12891"]
 
-sizePartition = 90000000 //30000000
-
-repartitions = 5 //30
-
-files = ["NA12892", "NA12891", "NA12878"]
-
+//chromList = ["2"]//,"3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22"]
 chromList = ["1"]
+elasticsearchHost= "localhost"
+index="v5.2"
 
-index="test"
+//load
+pipeline = ["load","parser","swap","sampleGroup","umd.get","umd.parse","umd.join","effectsGroupUMD","variants","deleteIndex","createIndex","toElastic"]//variants","deleteIndex","createIndex","toElastic"]//["variants","deleteIndex","createIndex","toElastic"]//["load","rawData","interception","sampleGroup","effectsGroup","variants","deleteIndex,"createIndex","toElastic"]
 
-
-pipeline = []#"load","rawData","interception","sampleGroup","effectsGroup","variants","deleteIndex","createIndex","toElastic"]
+//pipeline = ["load","toElastic"]
+checkPointDir="/tmp"
